@@ -1998,3 +1998,25 @@ X509_NAME_add_entry_by_txt              2022
 X509_NAME_add_entry_by_NID              2023
 X509_NAME_add_entry_by_OBJ              2024
 X509_NAME_ENTRY_create_by_txt           2025
+PEM_read_X509_AUX                       2026
+X509_CERT_AUX_free                      2027
+X509_alias_set                          2028
+PEM_read_bio_X509_AUX                   2029
+X509_trust_set_bit_asc                  2030
+d2i_X509_AUX                            2031
+X509_CERT_AUX_print                     2032
+ASN1_BIT_STRING_num_asc                 2033
+X509_CERT_AUX_new                       2034
+ASN1_BIT_STRING_set_asc                 2035
+i2d_X509_CERT_AUX                       2036
+PEM_write_X509_AUX                      2037
+X509_notrust_set_bit                    2038
+X509_add_notrust_object                 2039
+PEM_write_bio_X509_AUX                  2040
+X509_alias_get                          2041
+X509_trust_set_bit                      2042
+d2i_X509_CERT_AUX                       2043
+X509_notrust_set_bit_asc                2044
+i2d_X509_AUX                            2045
+ASN1_BIT_STRING_name_print              2046
+X509_add_trust_object                   2047
